--- a/admin/.env
+++ b/admin/.env
@@ -6,6 +6,8 @@ NODE_ENV=dev
 COOKIE_SESSION_SECRET=film_backend
 
 MSG_QUEUE_URL="amqp://trongdat:abc123456@rabbitmq-film:5672"
+# MSG_QUEUE_URL="amqps://sqnonxfg:pkOYVKOHCCHZLiArJjxQbISnrw5H_29Y@armadillo.rmq.cloudamqp.com/sqnonxfg"
+
 EXCHANGE_NAME="ONLINE_FILM"
 QUEUE_NAME="ADMIN_QUEUE"
 APP_SECRET="FILM_MICROSERVICES"
