--- a/film/.env
+++ b/film/.env
@@ -5,7 +5,9 @@ NODE_ENV=dev
 
 COOKIE_SESSION_SECRET=film_backend
 
+# MSG_QUEUE_URL="amqps://sqnonxfg:pkOYVKOHCCHZLiArJjxQbISnrw5H_29Y@armadillo.rmq.cloudamqp.com/sqnonxfg"
 MSG_QUEUE_URL="amqp://trongdat:abc123456@rabbitmq-film:5672"
+
 EXCHANGE_NAME="ONLINE_FILM"
 QUEUE_NAME="FILM_QUEUE"
 FILM_BINDING_KEY="FILM_BINDING"
