--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - backend-network
 
   rabbitmq-film:
-    image: rabbitmq:3-management
+    image: rabbitmq:4-management
     container_name: rabbitmq
     ports:
       - '5672:5672'
@@ -40,6 +40,9 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: trongdat
       RABBITMQ_DEFAULT_PASS: abc123456
+    # volumes:
+    #   - ./certs:/etc/rabbitmq/certs
+    #   - ./rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
     networks:
       - backend-network
     
@@ -297,7 +300,7 @@ services:
       - TZ=Asia/Ho_Chi_Minh  # Đặt múi giờ của hệ thống
     volumes:
       - ./logstash/pipeline:/usr/share/logstash/pipeline
-      - /var/log/nginx:/var/log/nginx:rw
+      - /var/log/nginx:/var/log/nginx
       - ./logstash/csv:/usr/share/logstash/csv
     depends_on:
       - elasticsearch
