--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -24,23 +24,23 @@
         # load balancing
         upstream user {
             least_conn;
-            server filmbackendmysql-user-3:5000 max_conns=100;
-            server filmbackendmysql-user-2:5000 max_conns=100;
+            # server filmbackendmysql-user-3:5000 max_conns=100;
+            # server filmbackendmysql-user-2:5000 max_conns=100;
             server filmbackendmysql-user-1:5000 max_conns=100;
         }
         upstream admin {
             least_conn;
             # zone admin 32k;
-            server filmbackendmysql-admin-3:5002 max_conns=100;
-            server filmbackendmysql-admin-2:5002 max_conns=100;
+            # server filmbackendmysql-admin-3:5002 max_conns=100;
+            # server filmbackendmysql-admin-2:5002 max_conns=100;
             server filmbackendmysql-admin-1:5002 max_conns=100;
         }
         upstream film {
             least_conn;
             zone film 32k;
             server filmbackendmysql-film-1:5003 max_conns=100;
-            server filmbackendmysql-film-2:5003 max_conns=100;
-            server filmbackendmysql-film-3:5003 max_conns=100;
+            # server filmbackendmysql-film-2:5003 max_conns=100;
+            # server filmbackendmysql-film-3:5003 max_conns=100;
 
         }
 
@@ -48,48 +48,47 @@
             least_conn; #gui request den may chu co so luong xu ly it nhat
             # zone backend 32k;
             server filmbackendmysql-rbac-1:5004 max_conns=100;
-            server filmbackendmysql-rbac-2:5004 max_conns=100;
-            server filmbackendmysql-rbac-3:5004 max_conns=100;
+            # server filmbackendmysql-rbac-2:5004 max_conns=100;
+            # server filmbackendmysql-rbac-3:5004 max_conns=100;
         }
 
         upstream nextjs {
             least_conn;
             # zone backend 32k;
             server filmbackendmysql-nextjs-1:3000 max_conns=100;
-            server filmbackendmysql-nextjs-2:3000 max_conns=100;
-            server filmbackendmysql-nextjs-3:3000 max_conns=100; 
+            # server filmbackendmysql-nextjs-2:3000 max_conns=100;
+            # server filmbackendmysql-nextjs-3:3000 max_conns=100; 
         }
         upstream nextjs-admin {
             least_conn;
             # zone backend 32k;
             server filmbackendmysql-nextjs-admin-1:3001 max_conns=100;
-            server filmbackendmysql-nextjs-admin-2:3001 max_conns=100;
-            server filmbackendmysql-nextjs-admin-3:3001 max_conns=100;
+            # server filmbackendmysql-nextjs-admin-2:3001 max_conns=100;
+            # server filmbackendmysql-nextjs-admin-3:3001 max_conns=100;
             #  max_conns=1000;
         }
 
       
 
-        server {
-            listen 80 default_server;
-            server_name _; 
+        # server {
+        #     listen 80 default_server;
+        #     server_name _; 
             
-            return 301 https://$host$request_uri;
-        }
+        #     return 301 https://$host$request_uri;
+        # }
       
 
         server {
-            # tls certification
-            listen 443 ssl;
-            server_name localhost;
+            listen 80;
+            server_name _;
             keepalive_timeout 75;
             gzip on;
             gzip_types text/plain application/json;
-            ssl_certificate /etc/ssl/certs/selfsigned.crt;
-            ssl_certificate_key /etc/ssl/certs/selfsigned.key;
-            ssl_protocols TLSv1.2 TLSv1.3;
-            ssl_prefer_server_ciphers on;
-            ssl_ciphers HIGH:!aNULL:!MD5;
+            # ssl_certificate /etc/ssl/certs/selfsigned.crt;
+            # ssl_certificate_key /etc/ssl/certs/selfsigned.key;
+            # ssl_protocols TLSv1.2 TLSv1.3;
+            # ssl_prefer_server_ciphers on;
+            # ssl_ciphers HIGH:!aNULL:!MD5;
 
             access_log  /var/log/nginx/access.log custom;
             error_log  /var/log/nginx/error.log warn;
@@ -105,10 +104,6 @@
             modsecurity on;
             modsecurity_rules_file /etc/nginx/modsec/main.conf;
 
-           
-            if ($http_host ~* "(169\.254\.169\.254|aws\.zaproxy\.org|alibaba\.zaproxy\.org|100\.100\.100\.200)") {
-                return 403;
-            }
          
             server_tokens off;
             location / {
@@ -129,13 +124,7 @@
                 add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
                 add_header Content-Security-Policy "connect-src 'self' https://localhost  https://cdn.plyr.io https://*.phim1280.tv https://s4.phim1280.tv;media-src 'self' blob:;object-src 'none'; img-src 'self' https://cdn.plyr.io https://localhost https://res.cloudinary.com http://res.cloudinary.com data:;frame-ancestors 'none';form-action 'self'; manifest-src 'self' https://localhost/sitemap.xml https://localhost/logo-film.png&w=96&q=75 https://localhost/robots.txt;" always;
                 add_header Cache-Control "no-store, no-cache, must-revalidate, private";
-                if ($arg_w ~ "(^[0-9]+/[0-9]+$ )"){
-                    return 400;
-                }
-                
-                if ($arg_w ~ "(^[0-9]+%[A-Za-z0-9]{2}[0-9]+$)" ){
-                    return 400;
-                }
+             
             }
 
             location /adminpage {
@@ -220,7 +209,7 @@
                 add_header X-Content-Type-Options nosniff always;
                 add_header X-Frame-Options "SAMEORIGIN";
                 add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self'; img-src 'self' data:; connect-src 'self'; frame-ancestors 'self';";
-    #  add_header 'Access-Control-Allow-Origin' 'https://45b4-2402-800-6375-94b7-5d90-17da-64f3-5a6c.ngrok-free.app';
+   
 
             }
 
