--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,5 +1,5 @@
 # FROM nginx:latest
-FROM nginx:latest
+FROM nginx:1.27.3
 
 RUN rm /etc/nginx/nginx.conf
 
@@ -15,30 +15,8 @@ USER root
 RUN chmod -R 755 /var/log/nginx && \
     chown -R root:root /var/log/nginx
 
-# # Install ModSecurity (build from source)
-# RUN git clone https://github.com/SpiderLabs/ModSecurity.git /opt/ModSecurity \
-#     && cd /opt/ModSecurity \
-#     && git submodule init \
-#     && git submodule update \
-#     && ./build.sh \
-#     && ./configure \
-#     && make \
-#     && make install
-
-# # Download and install the NGINX ModSecurity module
-# RUN wget https://github.com/SpiderLabs/ModSecurity-nginx/archive/master.tar.gz -O /opt/modsec-nginx.tar.gz \
-#     && tar -zxvf /opt/modsec-nginx.tar.gz -C /opt/ \
-#     && cd /opt/ModSecurity-nginx-master \
-#     && ./configure --with-compat --add-dynamic-module=/opt/ModSecurity/nginx \
-#     && make modules \
-#     && cp objs/ngx_http_modsecurity_module.so /etc/nginx/modules/
-# Install necessary build dependencies for ModSecurity
-# RUN apt-get update && \
-#     apt-get install -y apt-utils autoconf automake build-essential \
-#     git libcurl4-openssl-dev libgeoip-dev liblmdb-dev libpcre++-dev \
-#     libtool libxml2-dev libyajl-dev pkgconf wget zlib1g-dev
 RUN apt-get update && apt-get install -y apt-utils autoconf automake build-essential \
-    git libcurl4-openssl-dev libgeoip-dev liblmdb-dev libpcre3-dev \
+    git libcurl4-openssl-dev libgeoip-dev liblmdb-dev libpcre3-dev libpcre2-dev \
     libtool libxml2-dev libyajl-dev pkgconf wget zlib1g-dev
 # Clone the ModSecurity repository
 RUN git clone --depth 1 -b v3/master --single-branch https://github.com/SpiderLabs/ModSecurity \
@@ -69,11 +47,7 @@ RUN apt-get update && apt-get install -y wget && apt-get clean
 # Create the /etc/nginx/modsec directory
 RUN mkdir -p /etc/nginx/modsec
 
-# # Tải file modsecurity.conf-recommended vào thư mục /etc/nginx/modsec
-# RUN wget -P /etc/nginx/modsec/ https://raw.githubusercontent.com/SpiderLabs/ModSecurity/v3/master/modsecurity.conf-recommended
 
-# # Đổi tên file modsecurity.conf-recommended thành modsecurity.conf
-# RUN mv /etc/nginx/modsec/modsecurity.conf-recommended /etc/nginx/modsec/modsecurity.conf
 
 # Sao chép file unicode.mapping vào thư mục /etc/nginx/modsec
 RUN cp ModSecurity/unicode.mapping /etc/nginx/modsec
@@ -101,8 +75,8 @@ COPY crs-setup.conf /etc/nginx/owasp-modsecurity-crs-3.0.2/crs-setup.conf
 COPY ./modsec/main.conf /etc/nginx/modsec/main.conf
 COPY ./.htpasswd /etc/nginx/.htpasswd
 
-COPY ./cert/selfsigned.crt /etc/ssl/certs/selfsigned.crt;
-COPY ./cert/selfsigned.key /etc/ssl/certs/selfsigned.key;
+# COPY ./cert/selfsigned.crt /etc/ssl/certs/selfsigned.crt;
+# COPY ./cert/selfsigned.key /etc/ssl/certs/selfsigned.key;
 # Đảm bảo rằng chứng chỉ SSL tồn tại và có quyền truy cập đúng
 # RUN chmod 777 /etc/ssl/certs/selfsigned.crt
 # RUN chmod 777 /etc/ssl/certs/selfsigned.key
