--- a/film/package.json
+++ b/film/package.json
@@ -33,7 +33,7 @@
     "typescript": "^5.5.2"
   },
   "dependencies": {
-    "@elastic/elasticsearch": "^8.15.0",
+    "@elastic/elasticsearch": "^8.18.2",
     "@prisma/client": "^6.0.1",
     "accesscontrol": "^2.2.1",
     "amqplib": "^0.10.5",
@@ -45,6 +45,7 @@
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
+    "events": "^3.3.0",
     "express": "^4.19.2",
     "isomorphic-dompurify": "^2.13.0",
     "jest": "^29.7.0",
