--- a/filmFrontendUser/package.json
+++ b/filmFrontendUser/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.1.2",
+    "@heroicons/react": "^2.2.0",
+    "@heroui/react": "^2.7.10",
     "@iconicicons/react": "^1.5.1",
     "@nextui-org/react": "^2.4.6",
     "@nextui-org/tabs": "^2.0.35",
@@ -23,6 +25,7 @@
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "formik": "^2.4.6",
+    "framer-motion": "^12.18.1",
     "hls.js": "^1.5.14",
     "next": "^15.1.2",
     "next-recaptcha-v3": "^1.5.0",
