--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -79,8 +79,8 @@
       
 
         server {
-            listen 80;
-            server_name _;
+            listen 8080;
+            server_name localhost;
             keepalive_timeout 75;
             gzip on;
             gzip_types text/plain application/json;
@@ -105,7 +105,7 @@
             modsecurity_rules_file /etc/nginx/modsec/main.conf;
 
          
-            server_tokens off;
+            # server_tokens off;
             location / {
                 # auth_basic "Restricted Content";
                 # auth_basic_user_file /etc/nginx/.htpasswd; 
