--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -1,4 +1,4 @@
-    load_module modules/ngx_http_modsecurity_module.so;
+    # load_module modules/ngx_http_modsecurity_module.so;
     # user  nginx;
     worker_processes auto;
 
@@ -101,8 +101,8 @@
             #     add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, x-client-id';
             # }
 
-            modsecurity on;
-            modsecurity_rules_file /etc/nginx/modsec/main.conf;
+            # modsecurity on;
+            # modsecurity_rules_file /etc/nginx/modsec/main.conf;
 
          
             # server_tokens off;
