--- a/film/Dockerfile
+++ b/film/Dockerfile
@@ -1,14 +1,21 @@
-FROM node:20.18.1
+FROM node:20-alpine3.16 AS builder
 
 WORKDIR /app/film
+RUN apk add --no-cache libssl1.1
 
-COPY package.json .
+COPY package.json ./
 
 RUN npm install
 
 COPY . .
 
-# RUN npx prisma migrate dev --name init
+
+FROM node:20-alpine3.16
+
+WORKDIR /app/film
+RUN apk add --no-cache libssl1.1
+
+COPY --from=builder /app/film ./
 
 EXPOSE 5003
 
