--- a/proxy/crs-setup.conf
+++ b/proxy/crs-setup.conf
@@ -94,8 +94,8 @@
 # - In Apache, you can use ErrorDocument to show a friendly error page or
 #   perform a redirect: https://httpd.apache.org/docs/2.4/custom-error.html
 #
-SecDefaultAction "phase:1,log,auditlog,pass"
-SecDefaultAction "phase:2,log,auditlog,pass"
+SecDefaultAction "phase:1,pass,log,tag:'modsecurity'"
+SecDefaultAction "phase:2,pass,log,tag:'modsecurity'"
 
 # Example: Anomaly Scoring mode, log only to ModSecurity audit log
 # - By default, offending requests are blocked with an error 403 response.
@@ -174,15 +174,15 @@ SecDefaultAction "phase:2,log,auditlog,pass"
 #
 # Uncomment this rule to change the default:
 #
-#SecAction \
-#    "id:900000,\
-#    phase:1,\
-#    pass,\
-#    t:none,\
-#    nolog,\
-#    tag:'OWASP_CRS',\
-#    ver:'OWASP_CRS/4.8.0',\
-#    setvar:tx.blocking_paranoia_level=1"
+SecAction \
+    "id:900000,\
+    phase:1,\
+    pass,\
+    t:none,\
+    nolog,\
+    tag:'OWASP_CRS',\
+    ver:'OWASP_CRS/4.8.0',\
+    setvar:tx.blocking_paranoia_level=1"
 
 
 # It is possible to execute rules from a higher paranoia level but not include
@@ -317,16 +317,16 @@ SecDefaultAction "phase:2,log,auditlog,pass"
 #
 # Uncomment this rule to change the defaults:
 #
-#SecAction \
-#    "id:900110,\
-#    phase:1,\
-#    pass,\
-#    t:none,\
-#    nolog,\
-#    tag:'OWASP_CRS',\
-#    ver:'OWASP_CRS/4.8.0',\
-#    setvar:tx.inbound_anomaly_score_threshold=5,\
-#    setvar:tx.outbound_anomaly_score_threshold=4"
+SecAction \
+    "id:900110,\
+    phase:1,\
+    pass,\
+    t:none,\
+    nolog,\
+    tag:'OWASP_CRS',\
+    ver:'OWASP_CRS/4.8.0',\
+    setvar:tx.inbound_anomaly_score_threshold=5,\
+    setvar:tx.outbound_anomaly_score_threshold=4"
 
 
 #
