--- a/user/package.json
+++ b/user/package.json
@@ -43,6 +43,7 @@
     "amqplib": "^0.10.8",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "crypto": "^1.0.1",
