--- a/user/Dockerfile
+++ b/user/Dockerfile
@@ -17,7 +17,7 @@ FROM node:20-alpine3.16
 WORKDIR /app/user
 
 RUN apk add --no-cache libssl1.1
-
+RUN npm install
 COPY --from=builder /app/user ./
 
 # RUN npm install && npm cache clean --force
