--- a/film/Dockerfile
+++ b/film/Dockerfile
@@ -14,7 +14,7 @@ FROM node:20-alpine3.16
 
 WORKDIR /app/film
 RUN apk add --no-cache libssl1.1
-
+RUN npm install
 COPY --from=builder /app/film ./
 
 EXPOSE 5003
