--- a/rbac/package.json
+++ b/rbac/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "jest",
     "dev": "nodemon --inspect --watch prisma/schema.prisma --exec \"npx prisma migrate dev && npx prisma generate && ts-node server.ts\"",
-    "start": "nodemon"
+    "start": "node server.ts"
   },
   "keywords": [],
   "author": "",
